--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <!-- AI Video -->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                 <div class="col-lg-6"><video class="img-fluid" src="assets/videos/ai.mp4" autoplay loop controls
-                        muted></video>
+                        muted playsinline></video>
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
@@ -107,15 +107,15 @@
             <!-- Short-Form Video-->
             <div class="row gx-0 my-4 my-lg-5 align-items-center justify-content-center">
                 <div class="col-xl-8 col-lg-7" style="overflow-x: auto;">
-                    <div style="display: flex;  flex-wrap: nowrap; gap: 10px;">
-                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/intense.mp4" autoplay loop
-                            muted></video>
-                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts3.mp4" autoplay loop
-                            muted></video>
-                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts4.mp4" autoplay loop
-                            muted></video>
-                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts2.mp4" autoplay loop
-                            muted></video>
+                    <div class="shortVidDiv" style="display: flex;  flex-wrap: nowrap; gap: 10px;">
+                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/intense.mp4" autoplay loop controls
+                        muted playsinline></video>
+                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts3.mp4" autoplay loop controls
+                        muted playsinline></video>
+                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts4.mp4" autoplay loop controls
+                        muted playsinline></video>
+                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts2.mp4" autoplay loop controls
+                        muted playsinline></video>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-5 my-4">
@@ -129,7 +129,8 @@
             <!-- Travel Videos -->
             <div class="travelDiv" style="display: flex; border: 5px solid black;">
                 <div class="left">
-                    <video src="assets/videos/shorts1.mp4" autoplay loop muted controls></video>
+                    <video src="assets/videos/shorts1.mp4" autoplay loop controls
+                    muted playsinline></video>
                     <img src="assets/img/videoScript.png">
                 </div>
 
@@ -143,15 +144,15 @@
                 </div>
 
                 <div class="right">
-                    <video src="assets/videos/shorts1.mp4" autoplay loop muted controls></video>
+                    <video src="assets/videos/shorts1.mp4" autoplay loop controls
+                    muted playsinline></video>
                     <img src="assets/img/Frame 1.png" alt="">
                 </div>
             </div>
             <!-- Long-Form Video-->
             <div class="row gx-0 my-4 my-lg-5 align-items-center justify-content-center">
                 <div class="col-xl-8 col-lg-7">
-                    <div
-                        style="display: flex; flex-wrap: wrap; gap: 10px; align-items: center; justify-content: center;">
+                    <div class="iframeGridDiv">
                         <iframe class="iframeGrid"
                             src="https://www.youtube-nocookie.com/embed/bkOEWUC-Qdk?si=ZLrq0ztJitqWhtfD&amp;controls=0"
                             title="YouTube video player" frameborder="0"
