--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                                     style="width: 25px; height: 25px;"></a>
                             <a class="mx-2" href="#!"><img src="assets/icons/youtube-svgrepo-com.svg"
                                     style="width: 25px; height: 25px;"></i></a>
-                            <a class="mx-2" href="#!"><img src="assets/icons/linked-in-logo-of-two-letters-svgrepo-com.svg"
+                            <a class="mx-2" href="#!"><img
+                                    src="assets/icons/linked-in-logo-of-two-letters-svgrepo-com.svg"
                                     style="width: 25px; height: 25px;"></i></a>
                         </div>
                     </section>
@@ -88,8 +89,8 @@
         <div class="container px-4 px-lg-5">
             <!-- AI Video -->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><video class="img-fluid" src="assets/videos/ai.mp4" autoplay loop controls
-                        muted playsinline></video>
+                <div class="col-lg-6"><video class="img-fluid" src="assets/videos/ai.mp4" autoplay loop controls muted
+                        playsinline></video>
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
@@ -108,14 +109,14 @@
             <div class="row gx-0 my-4 my-lg-5 align-items-center justify-content-center">
                 <div class="col-xl-8 col-lg-7" style="overflow-x: auto;">
                     <div class="shortVidDiv" style="display: flex;  flex-wrap: nowrap; gap: 10px;">
-                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/intense.mp4" autoplay loop controls
-                        muted playsinline></video>
-                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts3.mp4" autoplay loop controls
-                        muted playsinline></video>
-                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts4.mp4" autoplay loop controls
-                        muted playsinline></video>
-                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts2.mp4" autoplay loop controls
-                        muted playsinline></video>
+                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/intense.mp4" autoplay loop
+                            controls muted playsinline></video>
+                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts3.mp4" autoplay loop
+                            controls muted playsinline></video>
+                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts4.mp4" autoplay loop
+                            controls muted playsinline></video>
+                        <video class="img-fluid mb-3 mb-lg-0" id="shorts" src="assets/videos/shorts2.mp4" autoplay loop
+                            controls muted playsinline></video>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-5 my-4">
@@ -127,10 +128,9 @@
                 </div>
             </div>
             <!-- Travel Videos -->
-            <div class="travelDiv" style="display: flex; border: 5px solid black;">
+             <div class="travelDiv" style="display: flex;"> <!-- add border when rightt added -->
                 <div class="left">
-                    <video src="assets/videos/shorts1.mp4" autoplay loop controls
-                    muted playsinline></video>
+                    <video src="assets/videos/shorts1.mp4" autoplay loop controls muted playsinline></video>
                     <img src="assets/img/videoScript.png">
                 </div>
 
@@ -138,16 +138,17 @@
                     <div class="d-flex h-100 bg-black">
                         <div class="project-text my-auto text-center text-lg-left">
                             <h4 class="text-white">Travel Videos</h4>
-                            <p class="mb-0 text-white-50">Professional travel video editing to capture your adventures with stunning visuals and compelling storytelling. Transform your journeys into cinematic masterpieces.</p>
+                            <p class="mb-0 text-white-50">Professional travel video editing to capture your adventures
+                                with stunning visuals and compelling storytelling. Transform your journeys into
+                                cinematic masterpieces.</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="right">
-                    <video src="assets/videos/shorts1.mp4" autoplay loop controls
-                    muted playsinline></video>
+                <!-- <div class="right">
+                    <video src="assets/videos/shorts1.mp4" autoplay loop controls muted playsinline></video>
                     <img src="assets/img/Frame 1.png" alt="">
-                </div>
+                </div> -->
             </div>
             <!-- Long-Form Video-->
             <div class="row gx-0 my-4 my-lg-5 align-items-center justify-content-center">
@@ -223,31 +224,41 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <img class="mb-4" style="width: 50px; height: 50px; border-radius: 100%;" src="https://i.postimg.cc/Xvc67z67/channels4-profile.jpg">
-                            <h4 class="text-uppercase m-0">Padmaja Evuri</h4>
-                            <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">“Incredibly talented editor. Meticulous attention to detail. Delivered stunning results beyond imagination.”</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <img class="mb-4" style="width: 50px; height: 50px; border-radius: 100%;" src="https://i.postimg.cc/Xvc67z67/channels4-profile.jpg">
+                            <img class="mb-4" style="width: 50px; height: 50px; border-radius: 100%;"
+                                src="https://i.postimg.cc/Xvc67z67/channels4-profile.jpg">
                             <h4 class="text-uppercase m-0">
                                 Wealth Explorer</h4>
-                            <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">“Professional, efficient, and creative. Transformed our project into a captivating masterpiece. Exceptional work!”</div>
+                                <video src="assets/videos/t2.mp4"  autoplay loop controls muted playsinline style="height: auto; width: 100%; aspect-ratio: 9/16; border-radius: 7px;" class="my-4"></video>
+                            <hr class="mx-auto" />
+                            <div class="small text-black-50">“Professional, efficient, and creative. Transformed our
+                                project into a captivating masterpiece. Exceptional work!”</div>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <img class="mb-4" style="width: 50px; height: 50px; border-radius: 100%;" src="https://i.postimg.cc/Xvc67z67/channels4-profile.jpg">
-                            <h4 class="text-uppercase m-0">SHAPERS EDUCATION</h4>
+                            <img class="mb-4" style="width: 50px; height: 50px; border-radius: 100%;"
+                                src="https://i.postimg.cc/D0zTNdDf/361466941-1492549608216070-5265261062130730181-n.jpg">
+                            <h4 class="text-uppercase m-0">Padmaja Evuri</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">“Exceeded expectations, brought our vision to life flawlessly. Highly recommend their video editing skills.”</div>
+                            <div class="small text-black-50">“Incredibly talented editor. Meticulous attention to
+                                detail. Delivered stunning results beyond imagination.”</div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                        <div class="card-body text-center">
+                            <img class="mb-4" style="width: 50px; height: 50px; border-radius: 100%;"
+                                src="https://i.postimg.cc/ZYPHszFq/277852771-718295932643191-3580684502720870241-n.jpg">
+                                <h4 class="text-uppercase m-0">SHAPERS EDUCATION</h4>
+                                <video src="assets/videos/t3.mp4"  autoplay loop controls muted playsinline style="height: auto; width: 100%; aspect-ratio: 9/16; border-radius: 7px;" class="my-4"></video>
+                            <hr class="my-4 mx-auto" />
+                            <!-- <div class="small text-black-50">“Exceeded expectations, brought our vision to life
+                                flawlessly. Highly recommend their video editing skills.”</div> -->
                         </div>
                     </div>
                 </div>
@@ -266,4 +277,5 @@
     <script src="js/scripts.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
+
 </html>
