--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Where Video Dreams Come True!</h2>
                     <section class="contact-section" style="margin: 0; padding: 0;">
                         <div class="social d-flex justify-content-center">
-                            <a class="mx-2" href="#!"><img src="assets/icons/instagram-svgrepo-com.svg"
+                            <a class="mx-2" target="_blank" href="https://www.instagram.com/editwave_creations"><img src="assets/icons/instagram-svgrepo-com.svg"
                                     style="width: 25px; height: 25px;"></a>
-                            <a class="mx-2" href="#!"><img src="assets/icons/youtube-svgrepo-com.svg"
+                            <a class="mx-2" target="_blank" href="https://www.youtube.com/@Editwave_creations"><img src="assets/icons/youtube-svgrepo-com.svg"
                                     style="width: 25px; height: 25px;"></i></a>
-                            <a class="mx-2" href="#!"><img
+                            <a class="mx-2" target="_blank" href="https://www.linkedin.com/in/sujal-singh-039a812a6/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><img
                                     src="assets/icons/linked-in-logo-of-two-letters-svgrepo-com.svg"
                                     style="width: 25px; height: 25px;"></i></a>
                         </div>
@@ -219,7 +219,7 @@
             </div>
         </div>
         <!-- Softwares I Know-->
-        <div class="softwareDiv" style="margin-top: 48px;">
+        <div class="softwareDiv" style="margin: 48px 24px 0 24px;">
             <div class="my-2 my-lg-2 text-center">
                 <h2 class="mb-4">Softwares I Know</h2>
                 <div class="softwares">
