--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         
                         <iframe
-                            src="https://www.youtube-nocookie.com/embed/JtsyiVY8pV4?si=9zI93exWck-TLGVy&amp;controls=0"
+                            src="https://www.youtube-nocookie.com/embed/JtsyiVY8pV4?si=9zI93exWck-TLGVy"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
