--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
         <div class="container px-4 px-lg-5">
             <!-- AI Video -->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><video class="img-fluid" src="assets/videos/ai.mp4" controls
-                        playsinline></video>
+                <div class="col-lg-6"><video class="img-fluid" src="assets/videos/ai.mp4" controls></video>
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
